--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
       <label>Name:</label>
       <input type="text" ng-model="yourName" placeholder="Enter a name here">
       <hr>
-      <h1>Hello {{yourName}}!</h1>
+      <h1>Hello {{yourName}}!!!</h1>
     </div>
     
         <div ng-controller="TodoCtrl">
