Chart working. Bootstrap UI working.

--- a/WebContent/individual-filter.html
+++ b/WebContent/individual-filter.html
@@ -3,6 +3,13 @@
 	<p>This is another example of a <b>JSON REST Get</b> request. It shows all the Biometric information (Heartrate BPM)
 	for out test user.</p> 
 
+	<datepicker ng-model="dt" show-weeks="showWeeks" starting-day="1" >
+	</datepicker>
+	Unfiltered date: <b>{{dt}}</b><br>
+	Filtered date:<b>{{dt | date:'yyyy-MM-dd'}}</b><br>
+
+	<a href="" ng-click="setSortExpression('biometric.datetime')" >Apply Date Filter</a></th>
+
 	<table border="1">
 		<tr>
 			<td>Index</td>
@@ -17,7 +24,7 @@
 		<tr ng-repeat="biometric in biometricList.result | filter:biometric.datetime={{dt}}">
 		 -->
 		 
-		<tr ng-repeat="biometric in biometricList.result | filter:biometric.measurement.uom='bpm'">
+		<tr ng-repeat="biometric in biometricList.result | filter: '{{dt}}'">
 			<td>{{$index + 1}}</td>
 			<td>{{biometric.id}}</td>
 			<td>{{biometric.individualId}}</td>
