--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,30 +1,42 @@
 <!doctype html>
-<html ng-app="myApp">
+<html>
   <head>
+  	<script src="js/jquery-2.0.3.min"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
     <script src="js/angular-resource.min.js"></script>
+	<script src="https://www.google.com/jsapi" type="text/javascript"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+	<script src="js/ngGoogleCharts.js"></script>
+	<script src="js/ui-bootstrap-tpls-0.4.0.min.js"></script>
+	<script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/heart.css">
+	<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
   </head>
   <body>
-    <div>
-      <label>Name:</label>
-      <input type="text" ng-model="yourName" placeholder="Enter a name here">
-      <hr>
-      <h1>Hello {{yourName}}!!!</h1>
-    </div>
 
 	<div ng-app="myApp">
+
+<!-- 
+	<script type="text/ng-template" id="tabPage.tpl.html">
+			<tabset type="tabs">
+				<tab heading="Users">Users content</tab>
+				<tab heading="List">List content</tab>
+				<tab heading="Chart">Chart content</tab>
+		    </tabset>
+	</script>
+ -->	
 		<div>
-			<a href="#list">List</a><br>
-			<a href="#person">Person</a><br>
-			<a href="#garbage">Garbage</a><br>
+			<ul>
+				<li class="nav"><a href="#list">Users</a></li>
+				<li class="nav"><a href="#person">BPM List</a></li>
+				<li class="nav"><a href="#filter">Filtered List</a></li>
+				<li class="nav"><a href="#chart">Chart</a></li>
+			</ul>
 		</div>
-		
 		<div ng-view></div>
 	</div>
-	
+
   </body>
 </html>
